--- a/style.css
+++ b/style.css
@@ -1,11 +1,9 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
 body{
-    display: flex;
     height: 100vh;
     width: 100vw;
     background-size: cover;
@@ -13,6 +11,7 @@ body{
 }
 
 .episode-card {
+    justify-content: center;
     border: 1px solid #ccc;
     border-radius: 8px;
     width: 95%;
